--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         <main>
+            <img src="logo.jpg" alt="" />
+            <br />
+            <br />
+            <br />
             <section>
                 <h1 id="welc">Welcome</h1>
                 <h2 id="to">to</h2>
