--- a/muh-kutti.html
+++ b/muh-kutti.html
@@ -20,7 +20,7 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="Khairunneesa.html">SUBADHA </a>
+               <a href="subadha.html">SUBADHA </a>
                 <h3>Children:</h3>
                 <a href="shamsudheen.html">Jabir </a>
                 <a href="riza.html">junaid</a>
