--- a/Sulaiman.html
+++ b/Sulaiman.html
@@ -20,7 +20,7 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="Khairunneesa.html">RAMLATH </a>
+                <a href="RAMLATH.html"> Ramlath </a>
                 <h3>Children:</h3>
                 <a href="Rasheeda.html">Rasheeda </a>
                 <a href="riza.html">Thahniya</a>
