--- a/abdul-kareem.html
+++ b/abdul-kareem.html
@@ -20,7 +20,7 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="Khairunneesa.html">Shahina </a>
+                 <a href="Shahina.html">Shahina </a>
                 <h3>Children:</h3>
                 <a href="shamsudheen.html">Shahanas </a>
                 <a href="jasif.html">Jasif</a>
