--- a/Thahniya.html
+++ b/Thahniya.html
@@ -20,10 +20,10 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="ashraf.html">Saifudheen</a>
+                <a href="Saifudheen.html">Saifudheen</a>
                 <h3>Children:</h3>
-                <a href="izan.html">Muhammed Muhsin </a>
-                <a href="izan.html">Abla </a>
+                <a href="muhsin.html">Muhammed Muhsin </a>
+                <a href="abla.html">Abla </a>
                 <a href="izan.html">Muhammed Ajwad </a>
             </div>
             <a href="Sulaiman.html" class="back-button">Back</a>
