--- a/Sulaiman.html
+++ b/Sulaiman.html
@@ -23,7 +23,7 @@
                 <a href="RAMLATH.html"> Ramlath </a>
                 <h3>Children:</h3>
                 <a href="Rasheeda.html">Rasheeda </a>
-                <a href="riza.html">Thahniya</a>
+                <a href="Thahniya.html">Thahniya</a>
                 <a href="jiyad.html">Shafida</a>
                 <a href="Mufeeda.html">Mufeeda </a>
                 <a href="naheem.html">Naheem </a>
