--- a/Thahniya.html
+++ b/Thahniya.html
@@ -12,7 +12,7 @@
                 <h2>Profile</h2>
             </div>
             <div class="profile-card">
-                <img src="riswana-im.png" alt="Profile Picture" />
+                <img src="def.png" alt="Profile Picture" />
                 <h3>Name: <span>Thahniya</span></h3>
                 <h3>Age: <span>33</span></h3>
                 <h3>Place: <span>Koorad</span></h3>
