--- a/Thahniya.html
+++ b/Thahniya.html
@@ -22,8 +22,8 @@
                 <h3>Spouse:</h3>
                 <a href="Saifudheen.html">Saifudheen</a>
                 <h3>Children:</h3>
-                <a href="muhsin.html">Muhammed Muhsin </a>
-                <a href="abla.html">Abla </a>
+               <a href="Muhsin.html">Muhammed Muhsin </a>
+              <a href="Abla.html">Abla </a>
                 <a href="izan.html">Muhammed Ajwad </a>
             </div>
             <a href="Sulaiman.html" class="back-button">Back</a>
