--- a/Muhsin.html
+++ b/Muhsin.html
@@ -22,7 +22,7 @@
                 <h3>guardian:</h3>
                 <a href="shamsudheen.html">Saifudheen</a>
             </div>
-            <a href="shamsudheen.html" class="back-button">Back</a>
+            <a href="Thahniya.html" class="back-button">Back</a>
         </div>
     </body>
 </html>
