--- a/Abla.html
+++ b/Abla.html
@@ -20,7 +20,7 @@
             </div>
             <div class="family-section">
                 <h3>guardian:</h3>
-                <a href="hamza.html">Saifudheen</a>
+                <a href="Saifudheen.html">Saifudheen</a>
             </div>
             <a href="Thahniya.html" class="back-button">Back</a>
         </div>
