--- a/Muhsin.html
+++ b/Muhsin.html
@@ -12,7 +12,7 @@
                 <h2>Profile</h2>
             </div>
             <div class="profile-card">
-                <img src="riza.png" alt="Profile Picture" />
+                <img src="def.png" alt="Profile Picture" />
                 <h3>Name: <span>Muhsin</span></h3>
                 <h3>Age: <span>14</span></h3>
                 <h3>Place: <span>Koorad</span></h3>
@@ -20,7 +20,7 @@
             </div>
             <div class="family-section">
                 <h3>guardian:</h3>
-                <a href="shamsudheen.html">Saifudheen</a>
+                <a href="Saifudheen.html">Saifudheen</a>
             </div>
             <a href="Thahniya.html" class="back-button">Back</a>
         </div>
