--- a/subadha.html
+++ b/subadha.html
@@ -20,9 +20,9 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="shamsudheen.html">Muhammed Kutti</a>
+                <a href="muh-kutti.html">Muhammed Kutti</a>
             </div>
-            <a href="shamsudheen.html" class="back-button">Back</a>
+            <a href="muh-kutti.html" class="back-button">Back</a>
         </div>
     </body>
 </html>
