--- a/Rasheeda.html
+++ b/Rasheeda.html
@@ -20,7 +20,7 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="Khairunneesa.html">Abdul Samad </a>
+                <a href="abdul-samad.html">Abdul Samad </a>
                 <h3>Children:</h3>
                 <a href="Hibathullah.HTML">Muhammad Hibathullah </a>
                 <a href="shamsudheen.html">Husna </a>
