--- a/Rasheeda.html
+++ b/Rasheeda.html
@@ -23,7 +23,7 @@
                 <a href="abdul-samad.html">Abdul Samad </a>
                 <h3>Children:</h3>
                 <a href="Hibathullah.HTML">Muhammad Hibathullah </a>
-                <a href="shamsudheen.html">Husna </a>
+                <a href="husna.html">Husna </a>
                 <a href="shamsudheen.html">Zahra Fathima </a>
             </div>
             <a href="Sulaiman.html" class="back-button">Back</a>
