--- a/husna.html
+++ b/husna.html
@@ -12,7 +12,7 @@
                 <h2>Profile</h2>
             </div>
             <div class="profile-card">
-                <img src="izan.png" alt="Profile Picture" />
+                <img src="def.png" alt="Profile Picture" />
                 <h3>Name: <span>Husna</span></h3>
                 <h3>Age: <span>16</span></h3>
                 <h3>Place: <span>Wandoor</span></h3>
