--- a/Rasheeda.html
+++ b/Rasheeda.html
@@ -24,7 +24,7 @@
                 <h3>Children:</h3>
                 <a href="Hibathullah.HTML">Muhammad Hibathullah </a>
                 <a href="husna.html">Husna </a>
-                <a href="shamsudheen.html">Zahra Fathima </a>
+                <a href="zahraa.html">Zahra Fathima </a>
             </div>
             <a href="Sulaiman.html" class="back-button">Back</a>
         </div>
