--- a/Thahniya.html
+++ b/Thahniya.html
@@ -24,7 +24,7 @@
                 <h3>Children:</h3>
                <a href="Muhsin.html">Muhammed Muhsin </a>
               <a href="Abla.html">Abla </a>
-                <a href="izan.html">Muhammed Ajwad </a>
+                <a href="ajwad.html">Muhammed Ajwad </a>
             </div>
             <a href="Sulaiman.html" class="back-button">Back</a>
         </div>
