--- a/Ajwad.html
+++ b/Ajwad.html
@@ -12,7 +12,7 @@
                 <h2>Profile</h2>
             </div>
             <div class="profile-card">
-                <img src="riza.png" alt="Profile Picture" />
+                <img src="def.png" alt="Profile Picture" />
                 <h3>Name: <span>Muhammad Ajwad</span></h3>
                 <h3>Age: <span>5</span></h3>
                 <h3>Place: <span>Koorad</span></h3>
