--- a/ayisha.html
+++ b/ayisha.html
@@ -20,8 +20,9 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                 <a href="ummer.html">Ummer</a>
-         <a href="ummer.html" class="back-button">Back</a>
+                <a href="ummer.html">Ummer</a>
+            </div>
+            <a href="ummer.html" class="back-button">Back</a>
         </div>
     </body>
 </html>
