--- a/muh-kutti.html
+++ b/muh-kutti.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -20,11 +21,11 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-               <a href="subadha.html">SUBADHA </a>
+                <a href="subadha.html">SUBADHA </a>
                 <h3>Children:</h3>
-                <a href="shamsudheen.html">Jabir </a>
-                <a href="riza.html">junaid</a>
-                <a href="jiyad.html">Jiyad</a>
+                <a href=".html">Shihabudheen </a>
+                <a href=".html">Arifha</a>
+                <a href=".html">Sumayya</a>
             </div>
             <a href="ummer.html" class="back-button">Back</a>
         </div>
