--- a/mufeeda.html
+++ b/mufeeda.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ummer's Profile</title>
-        <link rel="stylesheet" href="hussan.css" />
+        <link rel="stylesheet" href="shamsudheen.css" />
     </head>
     <body>
         <div class="profile-container">
@@ -13,20 +13,16 @@
             </div>
             <div class="profile-card">
                 <img src="def.png" alt="Profile Picture" />
-                <h3>Name: <span>Sulaiman Musliyar</span></h3>
-                <h3>Age: <span>60</span></h3>
+                <h3>Name: <span>Mufeeda</span></h3>
+                <h3>Age: <span>25</span></h3>
                 <h3>Place: <span>Vallapuzha</span></h3>
-                <h3>Job: <span>Teacher</span></h3>
+                <h3>Job: <span>Student</span></h3>
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="RAMLATH.html">RAMLATH </a>
+                <a href="Khairunneesa.html">Fahad </a>
                 <h3>Children:</h3>
-                <a href="Rasheeda.html">Rasheeda </a>
-                <a href="riza.html">Thahniya</a>
-                <a href="jiyad.html">Shafida</a>
-                <a href="Mufeeda.html">Mufeeda </a>
-                <a href="naheem.html">Naheem </a>
+                <a href="shamsudheen.html">Izza Fathima </a>
             </div>
             <a href="Sulaiman.html" class="back-button">Back</a>
         </div>
