--- a/Sulaiman.html
+++ b/Sulaiman.html
@@ -25,7 +25,7 @@
                 <a href="Rasheeda.html">Rasheeda </a>
                 <a href="Thahniya.html">Thahniya</a>
                 <a href="jiyad.html">Shafida</a>
-                <a href="Mufeeda.html">Mufeeda </a>
+                <a href="mufeeda.html">Mufeeda </a>
                 <a href="naheem.html">Naheem </a>
             </div>
             <a href="ummer.html" class="back-button">Back</a>
