--- a/Sulaiman.html
+++ b/Sulaiman.html
@@ -20,15 +20,15 @@
             </div>
             <div class="family-section">
                 <h3>Spouse:</h3>
-                <a href="RAMLATH.html"> Ramlath </a>
+                <a href="RAMLATH.html">RAMLATH </a>
                 <h3>Children:</h3>
                 <a href="Rasheeda.html">Rasheeda </a>
-                <a href="Thahniya.html">Thahniya</a>
-                <a href="jiyad.html">Shafida</a>
-                <a href="mufeeda.html">Mufeeda </a>
+                <a href="riza.html">Thahniya</a>
+                <a href="jiyad.html"> Shafida</a>
+                <a href="Mufeeda.html">Mufeeda </a>
                 <a href="naheem.html">Naheem </a>
             </div>
-            <a href="ummer.html" class="back-button">Back</a>
+            <a href="Sulaiman.html" class="back-button">Back</a>
         </div>
     </body>
 </html>
